# placement-quiz

./: .gitignore  App.js  README.md  app.json  package-lock.json  package.json
android/: build.gradle  settings.gradle
android/app/: CMakeLists.txt  build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/keerthi77459/careercatalyst/: MainActivity.kt  MainApplication.kt
android/app/src/main/res/values/: strings.xml
components/constants/: colors.js
components/reusable/: button.js
components/screen/: HomeScreen.js  LoginScreen.js  QuizListScreen.js  SignUpScreen.js  TestFromScreen.js  WelcomeScreen.js  index.js
components/services/: AuthProvider.js  AuthService.js  Firebase.js  Navigation.js
components/styles/: LoginScreenStyle.js  WelcomeScreenStyles.js
